# hoa-majors

./: .env.example  .gitignore  README.md  action.yml  config.py  gen_lookup_table.py  gen_major_mapping.py  get_courses.py  lookup_table_template.json  lookup_table_template.py  pyproject.toml  update_lookup_table.py  warning.txt
.claude/: settings.local.json
.github/workflows/: build.yml
SCHOOL_MAJORS/2019/本/: 960C2575EC53DA48E050007F010046A4.toml  960C2575EC60DA48E050007F010046A4.toml  960C2575EC72DA48E050007F010046A4.toml  960C2575EC7ADA48E050007F010046A4.toml  960C2575EC8EDA48E050007F010046A4.toml  960C2575ECA0DA48E050007F010046A4.toml  土木类(0401)-土木工程(040101).toml  土木类(0401).toml  城乡规划(060102).toml  工商管理类(0702)-会计学（大数据会计方向）(070202).toml  工商管理类(0702).toml  建筑学(060101).toml  建筑类(0601).toml  数学类(0801)-数据科学与大数据技术(080101).toml  数学类(0801).toml  机械类(0301)-机械设计制造及其自动化(030101).toml  机械类(0301).toml  材料类(0501)-材料科学与工程(050101).toml  材料类(0501).toml  环境科学与工程类(0402)-环境工程(040201).toml  环境科学与工程类(0402).toml  电子信息类(0201)-通信工程(020101).toml  电子信息类(0201).toml  电气类(0303)-电气工程及其自动化(030301).toml  电气类(0303).toml  经济学类(0701)-经济学(070101).toml  经济学类(0701).toml  自动化类(0302)-自动化(030201).toml  自动化类(0302).toml  计算机类(0101)-计算机科学与技术(010101).toml  计算机类(0101).toml
SCHOOL_MAJORS/2020/本/: A0BB6FA8B12B1871E0530B18F80A705C.toml  A0F20D6BD832163BE0530C18F80A224B.toml  A195E6906B1D9195E0530C18F80AA4D7.toml  土木类(0401)-土木工程(040101).toml  (+35 more)
data/: lookup_table.py
data/SCHOOL_MAJORS/: 2019_本_数学类.toml  2019_本_经济学类.toml  2020_本_计算机类.toml  2021_本_土木工程（第二学士学位）.toml  2021_本_机械类.toml  2021_本_经济学（新结构经济学实验班）.toml  2022_本_土木类.toml  2022_本_经济学（第二学士学位）.toml  2022_本_能源动力类.toml  2022_本_自动化（第二学士学位）.toml  2023_本_光电信息科学与工程.toml  2023_本_化学_036B010A.toml  2023_本_工科试验班（自动化与电气工程）.toml  2023_本_建筑学_03805614.toml  2023_本_经济学.toml  2023_本_计算机科学与技术.toml  2024_本_工科试验班（生态环境类）.toml  2024_本_建筑学.toml  2024_本_经济学（第二学士学位）.toml  2024_本_计算机科学与技术.toml  2025_本_工商管理.toml  2025_本_工科试验班（AI加先进技术领军班深圳拔尖班）.toml  2025_本_经济学（第二学士学位）.toml
scripts/: update_grades_summary.py
src/hoa_majors/: __init__.py  config.py
test/: getFah.py  get_course_single.py  get_major_correspondence.py
tests/: get_course_single.py
(+233 files in other folders)
