[project]
name = "hoa-majors"
version = "1.0.0"
description = "从哈尔滨工业大学（深圳）教务系统抓取各年级、各专业的培养方案课程数据"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "HITSZ-OpenAuto" }]
keywords = ["hitsz", "education", "courses", "curriculum"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

dependencies = [
    "requests>=2.28.0",
    "toml>=0.10.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
hoa-crawl = "hoa_majors.cli.crawl:main"
hoa-table = "hoa_majors.cli.table:main"
hoa-search = "hoa_majors.cli.search:main"
hoa-audit = "hoa_majors.cli.audit:main"
hoa-plans = "hoa_majors.cli.list_plans:main"
hoa-plan-courses = "hoa_majors.cli.list_courses:main"
hoa-course-info = "hoa_majors.cli.get_course:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
