[project]
name = "hoa-majors"
version = "1.0.0"
description = "从哈尔滨工业大学（深圳）教务系统抓取各年级、各专业的培养方案课程数据"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "HITSZ-OpenAuto" }]
keywords = ["hitsz", "education", "courses", "curriculum"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

dependencies = [
    "requests>=2.28.0",
    "toml>=0.10.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
hoa = "hoa_majors.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hoa_majors" = ["data/**/*.toml", "data/**/*.json", "data/**/*.py"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
